--- a/xblocks_contrib/poll/static/html/poll.html
+++ b/xblocks_contrib/poll/static/html/poll.html
@@ -1,5 +1,5 @@
 <div class="poll_xblock">
-<p>PollXBlock: count is now
+<p>PollBlock: count is now
     <span class='count'>{self.count}</span> (click me to increment).
 </p>
 </div>
