--- a/xblocks_contrib/poll/static/html/poll.html
+++ b/xblocks_contrib/poll/static/html/poll.html
@@ -1,5 +1,5 @@
+{% load i18n %}
+
 <div class="poll_xblock">
-<p>PollBlock: count is now
-    <span class='count'>{self.count}</span> (click me to increment).
-</p>
+<p>PollBlock: {% trans "count is now" %} <span class='count'>{{ count }}</span> {% trans "click me to increment." %}</p>
 </div>
